--- a/apps/web/src/app/globals.scss
+++ b/apps/web/src/app/globals.scss
@@ -1,12 +1,12 @@
-@use "tailwindcss";
+@use 'tailwindcss';
 
 @theme {
-  --font-display: "Roboto", "sans-serif";
-  --color-primary: #AD2528;
-  --color-bg: #191B28;
-  --color-border: #2A3439;
+	--font-display: 'Roboto', 'sans-serif';
+	--color-primary: #ad2528;
+	--color-bg: #191b28;
+	--color-border: #2a3439;
 }
 
 body {
-  @apply text-white bg-bg text-lg;
+	@apply text-white bg-bg text-lg;
 }
