--- a/apps/web/src/app/globals.scss
+++ b/apps/web/src/app/globals.scss
@@ -1,12 +1,11 @@
 @use 'tailwindcss';
+@config "../../tailwind.config.ts";
 
-@theme {
-	--font-display: 'Roboto', 'sans-serif';
-	--color-primary: #ad2528;
-	--color-bg: #191b28;
-	--color-border: #2a3439;
+:root {
+	--sidebar-width: 15rem;
 }
 
+html,
 body {
-	@apply text-white bg-bg text-lg;
+	@apply text-white bg-bg text-base;
 }
