--- a/apps/web/src/components/layout/Layout.module.scss
+++ b/apps/web/src/components/layout/Layout.module.scss
@@ -1,47 +1,23 @@
-@keyframes hide-sidebar {
-	from {
-		transform: translateX(0);
-		width: var(--sidebar-width);
-	}
+/* Скрытый сайдбар */
+.hidedSidebar > aside {
+	width: 3.8rem;
+	flex-grow: 0;
 
-	to {
-		width: 3.8rem;
-	}
-}
-
-@keyframes show-sidebar {
-	from {
-		width: 3.8rem;
-	}
-
-	to {
-		transform: translateX(0);
-		width: var(--sidebar-width);
+	> nav > div:first-child {
+		opacity: 0;
+		transition: opacity 0.35s;
 	}
 }
 
-.hidedSidebar {
-	> aside {
-		animation: hide-sidebar 0.35s forwards;
-		flex-grow: 0;
-
-		> nav {
-			> div:first-child {
-				@apply transition-opacity;
-
-				opacity: 0;
-			}
-		}
-	}
-
-	> div {
-		@apply w-full;
-	}
+.hidedSidebar > div {
+	width: 100%;
 }
 
-.showedSidebar {
-	> aside {
-		animation: show-sidebar 0.3s forwards;
-		width: var(--sidebar-width);
-	}
+/* Показанный сайдбар */
+.showedSidebar > aside {
+	width: var(--sidebar-width);
+}
+
+.initialSidebar > aside {
+	transition: width 0.35s;
 }
